--- a/hospital.html
+++ b/hospital.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospital Website</title>
+    <title>Huduma.hospital</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>[Hospital Name]</h1>
+        <h1>HUDUMA Hospital</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
